--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "Propertypro-lite project",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "start": "nodemon --exec babel-node src/index.js",
+    "build": "babel src --out-dir dist",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
+
+
   },
   "repository": {
     "type": "git",
@@ -18,15 +23,23 @@
   "homepage": "https://github.com/Luqman011/PropertyPro-Lite#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon": "^1.19.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.5.0",
+    "@babel/core": "^7.5.4",
+    "@babel/node": "^7.5.0",
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "coveralls": "^3.0.5",
     "eslint": "^6.0.1",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
-    "mocha": "^6.1.4"
+    "mocha": "^6.1.4",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^14.1.1"
   }
 }
